--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
          <div class="site-header__inner">
             <a class="logo" href="index.html">
-              <svg width="61" height="32"></svg>
+              <svg width="61" height="32" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M31.35 26.12 15.67 0 0 26.12h31.35ZM60.08 5.88 44.41 32 28.73 5.88h31.35Z" fill="currentColor"/></svg>
             </a>
             <div class="site-header__burger-wrap">
               <span class="site-header__burger"></span>
